<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreenActivity"
    android:id="@+id/relativeLayout">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@color/selBck"
        android:paddingBottom="10dp"
        android:id="@+id/select"
        >
        <TextView
            android:id="@+id/fromLabel"
            android:text="@string/from_label"
            android:layout_width="50dp"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:textColor="@color/white"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fromLoc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/toLabel"
            android:text="@string/to_label"
            android:layout_width="50dp"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="92dp"
            android:textColor="@color/white"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toLoc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="80dp"
            android:background="@color/white"
            />

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="45dp"
            android:id="@+id/relativeLayout2"
            android:textColor="@color/white">
            <TextView
                android:text="@string/at"
                android:layout_width="fill_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_height="20dp"
                android:textColor="@color/white"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:gravity="center"
                android:inputType="time"
                android:ems="10"
                android:text="@string/time"
                android:id="@+id/time"
                android:textColor="@color/white"
                />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findShuttle"
            android:id="@+id/button"
            android:layout_marginTop="140dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/selBck"
        android:paddingTop="10dp"
        android:id="@+id/results"
        >

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:gravity="right"
        android:layout_centerHorizontal="true"
        android:layout_height="240dp"
        android:textColor="@color/white"
        android:text="Please select your journey"
        />
    </RelativeLayout>


</RelativeLayout>
